[package]
name = "manql"
version = "0.1.0"
authors = ["Dominik Tarnowski <dom@tdom.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "^1.0"
serde = { version = "^1.0", features = ["derive"] }
dirs = "^2.0"
pest = "^2.1.3"
pest_derive = "^2.1.0"